--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -5,23 +5,52 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
+
     android:padding="15dp"
     tools:context=".LoginHandle.Login">
 
 
+    <LinearLayout
+        android:id="@+id/backBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/icon_back_new"/>
+
+        <TextView
+            android:layout_marginStart="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Back"
+            android:textSize="20dp"
+            android:layout_gravity="center_vertical"/>
+    </LinearLayout>
 
     <TextView
-        android:textSize="25sp"
+        android:layout_marginTop="30dp"
+        android:textSize="35sp"
         android:textStyle="bold"
-        android:gravity="center"
-        android:layout_marginBottom="20dp"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/login"/>
+        android:text="Reset password"/>
+
+    <TextView
+
+        android:textColor="#7a7f86"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:textSize="18sp"
+        android:text="Enter the email associated with your account and we'll send an email with instructions to reset your password."/>
 
 
     <com.google.android.material.textfield.TextInputLayout
+        android:layout_marginTop="30dp"
         android:id="@+id/emailLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -39,34 +68,13 @@
 
 
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/passwordLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:passwordToggleEnabled="true"
-        app:errorEnabled="false">
-
-        <com.google.android.material.textfield.TextInputEditText
-
-            android:id="@+id/Password"
-            android:inputType="textPassword"
-            android:hint="@string/password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-    </com.google.android.material.textfield.TextInputLayout>
 
 
 
-    <CheckBox
-        android:id="@+id/ckRemember"
-        android:layout_gravity="left"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Remember me"
-        android:textSize="15sp" />
+
 
     <androidx.cardview.widget.CardView
+        android:layout_marginTop="20dp"
         android:id="@+id/btn_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -83,7 +91,7 @@
                 android:id="@+id/textLogin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Login"
+                android:text="Send Instructions"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:textColor="@color/white"/>
@@ -99,28 +107,5 @@
             
     </androidx.cardview.widget.CardView>
         
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:layout_marginTop="12dp">
-
-        <TextView
-            android:id="@+id/toForgotPassword"
-            android:layout_width="wrap_content"
-            android:textSize="15sp"
-            android:layout_height="wrap_content"
-            android:text="Forgot your login details?"/>
-        <TextView
-            android:id="@+id/to_register"
-            android:paddingLeft="10dp"
-            android:textSize="15sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textColor="#333333"
-            android:text="Don't have a account"/>
-    </LinearLayout>
 
 </LinearLayout>
