--- a/app/src/main/res/layout/fragment_online_list.xml
+++ b/app/src/main/res/layout/fragment_online_list.xml
@@ -127,7 +127,7 @@
 
             </com.google.android.material.appbar.AppBarLayout>
 
-            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            <RelativeLayout
                 android:id="@+id/content"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -140,7 +140,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="#f5f6fa" />
-            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+            </RelativeLayout>
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
